src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Enhancement_Status__c</fullName>
        <description>This field will be used to capture the status of the requested enhancement.</description>
        <label>Enhancement Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build and Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Excludes_Weekends__c</fullName>
        <label>Business or Calendar Days</label>
        <picklist>
            <picklistValues>
                <fullName>Business Days</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar Days</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Cash_Flows__c</fullName>
        <label>Expected Cash Flows</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Funding_Amount__c</fullName>
        <label>Expected Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FATCA_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FATCA Lawyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FX_on_Flow__c</fullName>
        <label>FX on Flow</label>
        <picklist>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FX_on_Repatriation_of_Income_Dividends__c</fullName>
        <label>FX on Repatriation of Income/Dividends</label>
        <picklist>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FX_on_Trading_Activity__c</fullName>
        <label>FX on Trading Activity</label>
        <picklist>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule_Assessment__c</fullName>
        <label>Fee Schedule Assessment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fee_Schedule__c</fullName>
        <label>Fee Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Management Fee Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Support</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fee_Type_urf__c</fullName>
        <formula>TEXT(URF_Fee__r.Fee_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Class_Actions__c</fullName>
        <label>Filing Class Actions</label>
        <picklist>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Acknowledgement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Acknowledgement</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Reporting_Period__c</fullName>
        <label>First Reporting Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fix_Applied__c</fullName>
        <label>Fix Applied</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flow_Date__c</fullName>
        <label>Flow Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flow_Reason__c</fullName>
        <label>Flow Reason</label>
        <picklist>
            <picklistValues>
                <fullName>De-risking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fee Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-House Management/ OCIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move to Passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Client Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Restructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebalance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Freedom_of_Information_Act_Applicable__c</fullName>
        <label>Freedom of Information Act Applicable</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>Expected Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Method__c</fullName>
        <description>This is the funding method for the new account</description>
        <label>Funding Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-kind modeled securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-kind unmodeled securities</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-kind modeled securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-kind unmodeled securities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funds_Lawyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funds Lawyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Futures_Agreement__c</fullName>
        <inlineHelpText>MFS would like to know if there is a Futures or ISDA agreement with your entity and any counterparties.</inlineHelpText>
        <label>Futures Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GDS_Acknowledgement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval field for Amendment Process for Retail Onboarding.</description>
        <label>GDS Acknowledgement</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesW4Bb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GIS_Risk_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GIS - Risk Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GIS_Transition_Management_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GIS - Transition Management Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guidelines__c</fullName>
        <formula>TEXT(URF_Fee__r.Guidelines__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guidelines</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMA_Finalization_Date__c</fullName>
        <label>IMA Finalization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISDA_Counterparty__c</fullName>
        <label>ISDA Counterparty</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISDA__c</fullName>
        <inlineHelpText>MFS would like to know if there is a Futures or ISDA agreement with your entity and any counterparties.  Our investment team may consider the use of futures for the purpose of reducing out of market exposure on the initial funding or material in/outflows.</inlineHelpText>
        <label>ISDA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_Progress_Status_Start__c</fullName>
        <label>In Progress Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Inclusion_in_Client_Lists__c</fullName>
        <inlineHelpText>Use of Client Name - Confidentiality</inlineHelpText>
        <label>Inclusion in Client Lists</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_LOE__c</fullName>
        <description>Field used to capture level of estimate for integration for enhancement.</description>
        <label>Integration LOE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internet_set_up_for_your_account__c</fullName>
        <formula>Text(Account.Internet_Set_Up_For_Account__c)</formula>
        <label>Internet set up for your account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invest_Cash_Short_Term__c</fullName>
        <label>Invest Cash (Short Term)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Compliance_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment Compliance Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Investment_Share_Class__c</fullName>
        <formula>Client_Investment__r.Share_Class__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investment Share Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_or_Rebate__c</fullName>
        <label>Invoicing or Rebate</label>
        <picklist>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_MFS_responsible_for_corporate_actions__c</fullName>
        <label>Is MFS responsible for corporate actions</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_MFS_responsible_for_proofs_of_claims__c</fullName>
        <label>Is MFS responsible for proofs of claims?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_client_allowed_to_trade_Derivatives__c</fullName>
        <inlineHelpText>If yes, need Dodd Frank Reps</inlineHelpText>
        <label>Is client allowed to trade Derivatives?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LEI_Number__c</fullName>
        <label>LEI Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Billing_Date__c</fullName>
        <inlineHelpText>Last Date MFS earns a fee</inlineHelpText>
        <label>Last Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Reporting_Date__c</fullName>
        <inlineHelpText>Last Period of Reporting i.e. 30th June 2014</inlineHelpText>
        <label>Last Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Valuation_Date__c</fullName>
        <label>Last Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Legal_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Liquidation_Requested__c</fullName>
        <label>Liquidation Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFSI_Management_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MFSI - Management Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFS_Contracting_Entity_Sub_Type__c</fullName>
        <label>MFS Contracting Entity Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFS_Contracting_Entity__c</fullName>
        <label>MFS Contracting Entity</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFS_MB_Acronym_if_any__c</fullName>
        <label>MFS MB Acronym (if any)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Transaction_Fee__c</fullName>
        <description>Fee only applies to cash redemptions from FCPs, Canadian Pools and CCTs, CITs, and LLCs. Refer to material threshold and transaction fee policies and schedules</description>
        <label>Material Transaction Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model_Portfolio__c</fullName>
        <label>Model Portfolio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Favored_Nations__c</fullName>
        <label>Most Favored Nations</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Attribution_Required__c</fullName>
        <label>New Attribution Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Status_Start__c</fullName>
        <label>New Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Case_CreateDate__c</fullName>
        <formula>DATEVALUE(CreatedDate)+ CASE(TEXT(Repeats__c), &apos;Monthly&apos;, 30,&apos;Quarterly&apos;, 90,&apos;Semi Annual&apos;,180,&apos;Annual&apos;,360,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Case CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_US_Questionnaire_Approval_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-US Questionnaire Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Client__c</fullName>
        <label>Notify Client</label>
        <picklist>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code of Ethics Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Approvals_Received__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Approvals Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Approvals_Sent__c</fullName>
        <formula>IF(OR(!ISBLANK( Portfolio_Management_Approver1__c ),!ISBLANK(Portfolio_Management_Approver2__c ),!ISBLANK(Portfolio_Management_Approver3__c ) ),1,0)+
IF(!ISBLANK( Client_Service_Approver__c),1,0)+
IF(!ISBLANK( Corporate_Finance_Billing_Approver__c ),1,0)+
IF(!ISBLANK( Compliance_AML_KYC_Approver__c),1,0)+
IF(!ISBLANK( Legal_Approver__c ),1,0)+
IF(Compliance_Code_of_Ethics_Group__c,1,0)+
IF(GIS_Risk_Group__c,1,0)+
IF(GIS_Transition_Management_Group__c,1,0)+
IF(Insurance_Group__c,1,0)+
IF(MFSI_Management_Group__c,1,0)+
IF(Performance_Information_Management_Group__c,1,0)+
IF(Portfolio_Compliance_Back_End_Group__c,1,0)+
IF(Reporting__c,1,0)+
IF(Trading_Equity_Group__c,1,0)+
IF(Trading_Fixed_Income_Group__c,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Approvals Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Occurrence__c</fullName>
        <label>Number of Occurrence</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_PM_Approvals_Required__c</fullName>
        <label>Number of PM Approvals Required</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Occurence__c</fullName>
        <formula>TEXT(Total_No_of_Occurrences__c)+&apos; of &apos;+ Number_of_Occurrence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Occurrences</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_Number__c</fullName>
        <description>Current Occurrence Number (if Recurring Case)</description>
        <label>Number of Occurrences</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offering_Performance_based_Fee__c</fullName>
        <formula>TEXT(URF_Fee__r.Offering_Performance_based_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Performance based Fee?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <formula>Requester__r.MFS_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Omnibus__c</fullName>
        <label>Omnibus</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access__c</fullName>
        <label>Opportunity Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_urf__c</fullName>
        <formula>URF_Fee__r.Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Org_Type__c</fullName>
        <formula>Text(Account.Organization_Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Access__c</fullName>
        <label>Organization Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Funding_Date__c</fullName>
        <formula>IF(ISBLANK(Client_Investment__r.Account_Start_Date__c ),NULL , Client_Investment__r.Account_Start_Date__c)</formula>
        <label>Original Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Owner__c</fullName>
        <label>Original Owner</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Accounts_with_Client__c</fullName>
        <label>Other Accounts with Client?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Application_Fees__c</fullName>
        <label>Other Application Fees</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Others_still_in_share_class_vehicle__c</fullName>
        <label>Others still in share class/vehicle?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outside_Guidelines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outside Guidelines?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Client_Entity_Type__c</fullName>
        <label>Overall Client Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sovereign Wealth Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government/Municipal/Local Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund of Funds</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PLSA_Requirement__c</fullName>
        <label>PLSA Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Id__c</fullName>
        <label>Parent Case Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Number__c</fullName>
        <label>Parent Case Number Recurring</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participate_in_IPOs__c</fullName>
        <inlineHelpText>If yes, we will also provide a FINRA Rule 5130 Form.  

We recommend establishing this for your account at account set up in the event that the investment team wishes your account to participate in an IPO offering.</inlineHelpText>
        <label>Participate in IPOs?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Due_Check__c</fullName>
        <formula>IF(TODAY() - Due_Date__c&gt;0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Due__c</fullName>
        <formula>IF(TODAY() - Due_Date__c&gt;0,IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;red&quot;,30,30),&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Status_Start__c</fullName>
        <label>Pending Status Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Performance_Based_Fee__c</fullName>
        <label>Performance Based Fee</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Information_Management_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance/Information Management Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Legal_Name__c</fullName>
        <label>Plan Legal Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Code__c</fullName>
        <formula>Client_Investment__r.Portfolio__r.Portfolio_Code__c</formula>
        <label>Portfolio Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Compliance_Back_End_Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio Compliance (Back End) Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portfolio_Management_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Management Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PortfolioManagementApprover1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Management_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Management Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PortfolioManagementApprover2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>